# RT-multiplayer-Game-Engine

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  Game.cpp  Game.h  NetworkClient.cpp  NetworkClient.h  Tilemap.cpp  Tilemap.h  main.cpp
client3D/: CMakeLists.txt  main.cpp
client3d/: 1.model_loading.fs  CMakeLists.txt  NetworkClient.cpp  NetworkClient.h  main.cpp  test_client.cpp
client3d/include/: camera.h  mesh.h  model.h  shader.h
client3d/shaders/: 1.model_loading.fs  basic.frag  basic.vert
server/: CMakeLists.txt  GameMap.cpp  GameMap.h  map_data.h  server.cpp  test_server.cpp
shared/: component.h  entity.h  protocol.h  system.h
